# atlas-download-manager

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  quality.yml
docs/: README.md  architecture.md  commands.md  configuration.md  dependency-compliance.md  development.md  download-planning.md  download-research.md  installation.md  media-edge-cases.md  migration.md  mirror-policy.md  open-directory-audit-2026-07-15.md  quick-start.md  repository-audit-2026-07-15.md  responsible-use.md  smart-sessions.md  system-contracts.md  troubleshooting.md  ui-ux.md  why-atlas.md
packaging/homebrew/: atlas-download-manager.rb  atlas.rb
src/atlas/: __init__.py  __main__.py  adapters.py  adaptive.py  aria2_rpc.py  backends.py  batch.py  cli.py  config.py  directory_explorer.py  directory_index.py  directory_parser.py  directory_scanner.py  directory_tree.py  doctor.py  engine.py  errors.py  file_probe.py  formats.py  hub.py  logging.py  media_capabilities.py  menu.py  models.py  network.py  optimizer.py  passthrough.py  paths.py  planner.py  preflight.py  presets.py  private_files.py  progress.py  progress_events.py  redaction.py  runner.py  sessions.py  setup.py  theme.py  urls.py  (+1 more)
tests/: conftest.py  test_adaptive.py  test_aria2_rpc.py  test_backends.py  test_batch.py  test_cli.py  test_config.py  test_contracts.py  test_directory_index.py  test_doctor.py  test_documentation.py  test_engine.py  test_file_probe.py  test_formats.py  test_hub.py  test_installer.py  test_logging.py  test_media_capabilities.py  test_menu.py  test_models.py  test_network.py  test_optimizer.py  test_passthrough.py  test_paths.py  test_planner.py  test_preflight.py  test_presets.py  test_private_files.py  test_progress.py  test_redaction.py  test_runner.py  test_setup.py  test_theme.py  test_views.py  test_wget2_integration.py
