[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "atlas-download-manager"
version = "0.1.0"
description = "Plan-first Python CLI and TUI download manager for video, audio, files, batches, website mirrors, and open directories."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "atlas contributors" }]
keywords = [
  "aria2",
  "audio-downloader",
  "batch-downloader",
  "cli",
  "download-manager",
  "linux",
  "macos",
  "open-directory",
  "terminal-app",
  "tui",
  "video-downloader",
  "website-downloader",
  "website-mirror",
  "wget",
  "wget2",
  "youtube-downloader",
  "yt-dlp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "certifi>=2026.6.17",
  "mutagen>=1.47",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.14.2",
  "questionary>=2.0",
  "rich>=13.7",
  "typer>=0.26.8",
  "yt-dlp>=2026.6.9",
]

[project.urls]
Homepage = "https://github.com/xkam7ar/atlas-download-manager"
Repository = "https://github.com/xkam7ar/atlas-download-manager"
Issues = "https://github.com/xkam7ar/atlas-download-manager/issues"
Changelog = "https://github.com/xkam7ar/atlas-download-manager/blob/main/CHANGELOG.md"
Documentation = "https://github.com/xkam7ar/atlas-download-manager/blob/main/docs/README.md"
Security = "https://github.com/xkam7ar/atlas-download-manager/security/policy"
Support = "https://github.com/xkam7ar/atlas-download-manager/blob/main/SUPPORT.md"

[project.optional-dependencies]
interactive = ["questionary>=2.0"]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.8",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.8",
]

[project.scripts]
atlas = "atlas.cli:app"

[tool.hatch.build]
# Development and packaging metadata are not runtime package contents. Keeping
# the Homebrew formula out of the sdist also lets its checksum safely point at
# the immutable sdist release asset.
exclude = ["/.codebase-memory", "/packaging"]

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["atlas"]

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that exercise optional external downloader binaries",
]
